# Quantum-Targeted-Energy-Transfer

./: .gitignore  CITATION.cff  LICENSE  Makefile  PINN.py  Q_learning_NN.py  README.md  array_task_qtet.sbatch  mpi_task.sbatch  mpi_task_qtet.sbatch  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
D-A_D_epsilon_D=-4.250_V={'A'_0.5}_chi_D=2.252A_epsilon_A=0.000_V={'D'_0.5}_chi_A=-13.068_Scheduler_constant_lr_0.100000/: status
D-A_D_epsilon_D=-4.250_V={'A'_0.5}_chi_D=3.556A_epsilon_A=0.000_V={'D'_0.5}_chi_A=-3.180_Scheduler_constant_lr_0.100000/: status
D-A_D_epsilon_D=-4.250_V={'A'_0.5}_chi_D=7.912A_epsilon_A=0.000_V={'D'_0.5}_chi_A=-1.261_Scheduler_constant_lr_0.100000/: status
new_data/: ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.20202020202020154.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.28282828282828243.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.3636363636363633.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.4444444444444442.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.5252525252525251.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.606060606060606.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.6868686868686864.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.7676767676767673.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.8484848484848482.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-0.9292929292929291.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.01010101010101.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.0909090909090908.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.1717171717171713.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.2525252525252522.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.333333333333333.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.414141414141414.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.4949494949494948.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.5757575757575757.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.6565656565656566.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.737373737373737.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.818181818181818.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.8989898989898988.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-1.9797979797979797.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.0606060606060606.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.141414141414141.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.2222222222222223.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.3030303030303028.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.3838383838383836.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.4646464646464645.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.5454545454545454.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.6262626262626263.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.7070707070707067.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.787878787878788.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.8686868686868685.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-2.9494949494949494.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-3.0303030303030303.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-3.111111111111111.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-3.191919191919192.txt  ND_analytical,λ=0.001,χΑ=-4.0,χD=-3.2727272727272725.txt  (+10 more)
(+72 files in other folders)
