[metadata]
name = tet-JAndronis
version = 0.0.1
author = Jason Andronis
author_email = iasona98@gmail.com
description = My undergraduate thesis projects code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JAndronis/Thesis
project_urls =
    Bug Tracker = https://github.com/JAndronis/Thesis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src